--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -12,7 +14,40 @@ code {
     monospace;
 }
 
+a{
+  text-decoration: none;
+}
+
 .title{
-  color: magenta;
   text-align: center;
+  color: magenta;
+}
+.navbar{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
+}
+
+.logo{
+  color: magenta;  
+}
+
+.navbar-nav{
+  list-style-type: none;
+  display: flex;
+}
+
+.navbar-nav li{
+  border-radius: 5px;
+}
+
+.navbar-nav li:last-child{
+  background: magenta;
+}
+.navbar-nav li a{
+  display: inline-block;
+  padding: 10px 30px;
+  color: #000;
+  font-weight: bold;
 }
