--- a/src/MyForm.scss
+++ b/src/MyForm.scss
@@ -21,7 +21,7 @@ body{
     align-items: center;
 }
 form{
-    width: 25%;
+    width: 25rem;
     padding: 2rem;
     color: $textfore;
     background-color: rgba($formbg, .2);
@@ -33,7 +33,7 @@ form{
     font-family: sans-serif;
 
     .signupHeader{
-        padding: 2rem 1rem;
+        padding: 1rem;
         text-align: center;
     
         .title{
@@ -45,7 +45,7 @@ form{
     .signUp{
 
         .lbl, .inp{
-            font-size: 1.5rem;
+            font-size: 1.3rem;
             display: block;
         }
         .lbl{
@@ -63,9 +63,12 @@ form{
                         inset -5px -5px 5px rgb(20, 20, 20);
         }
         .message{
-            display: inline-block;
+            display: block;
             margin: .5rem 0 0;
             font-weight: bold;
+            font-size: .8rem;
+            position: relative;
+            height: 10px;
         }
         .btn{
             font-size: 1.5rem;
@@ -76,7 +79,7 @@ form{
             background-color: $bodybg;
             width: 100%;
             border-radius: 10px;
-            margin: 3rem 0 1rem;
+            margin: 2.5rem 0 1rem;
             color: $textfore;
         }
     }
