--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,16 @@
 a{
     text-decoration: none;
 }
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+button{
+    border: none;
+    outline: none;
+    background: violet;
+    padding: 5px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+}
